...
                          Bootstrap.terminal,
                          size: 16.0,
                          color: Colors.white,
                        ),
                        ),
                        SizedBox(width: 10.0),
                        Text('Debug Mode Route',
                            style:
                                TextStyle(color: Colors.white, fontSize: 16.0)),
                      ],
                    ),
                  ),
                  style: ElevatedButton.styleFrom(
...
